@@ -128,6 +128,37 @@ if test "$enable_hal_support" = "yes"; then hal=1; else hal=0; fi
 AC_DEFINE_UNQUOTED(ENABLE_HAL_SUPPORT, $hal, [Define to 1 if you want hal support.])
 
 
+dnl
+dnl whether dbus support for udev is required
+dnl
+AC_ARG_ENABLE(udev-support,
+              [  --enable-udev-support  enable udev support (requires D-Bus)],
+              enable_udev_support=$enableval, enable_udev_support=yes)
+
+if ! test "$enable_udev_support" = "no"; then
+  dnl Check for D-Bus
+  PKG_CHECK_MODULES(DBUS, [dbus-1 >= 0.60, dbus-glib-1 >= 0.60],
+                    dbus=yes, dbus=no)
+
+  if test "$dbus" = "no"; then
+    if test "$enable_udev_support" = "auto"; then
+      AC_MSG_NOTICE([D-Bus not found, building without udev support])
+      enable_udev_support=no
+    else
+      AC_MSG_ERROR([udev support requested but D-Bus could not be found])
+    fi
+  else
+    AC_MSG_NOTICE([Building with udev support])
+    AC_DEFINE(ENABLE_UDEV_SUPPORT, 1, [Define if building with udev support])
+    enable_udev_support=yes
+  fi
+else
+  AC_MSG_NOTICE([Building without udev support])
+fi
+
+if test "$enable_udev_support" = "yes"; then udev=1; else udev=0; fi
+AC_DEFINE_UNQUOTED(ENABLE_UDEV_SUPPORT, $udev, [Define to 1 if you want udev support.])
+
 dnl Checks for header files.
 
 
